--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -13,7 +13,7 @@ body {
 .ultralight {
   font-family: "Avenir Next", "UltraLight";
   font-weight: lighter;
-  padding-right: 3px;
+  padding-right: 1px;
 }
 
 .normalbold {
@@ -21,9 +21,8 @@ body {
   font-weight: normal;
 }
 
-
 $cellheight: (150px/4);
-$cellwidth: (140px/4);
+$cellwidth: (150px/4);
 $gridwidth: $cellwidth * 9 + 2;
 $gridheight: $cellheight * 9 + 2;
 $boardwidth: $gridwidth + $cellwidth +1;
@@ -48,4 +47,5 @@ $boardheight: $gridheight + $cellheight;
 .board {
   width: $boardwidth;
   height: $boardheight;
+  cursor: url('/black_stone.png') 42 42, auto;
 }
