--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -1,7 +1,6 @@
 <template name='header'>
   <nav class="yeah" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="{{pathFor 'home'}}" class="brand-logo"><span class="ultralight">go</span><span class="normalbold">go</span><span class="demibold"><strong>go</strong></span></a>
       <ul class="right hide-on-med-and-down">
         {{#if currentUser}}
           <li class='logout'><a href='{{pathFor "signIn"}}'>Logout</a></li>
@@ -17,7 +16,7 @@
           <li class='{{isActiveRoute "signIn"}} nav-mobile-link'><a href='{{pathFor "signIn"}}'>Sign In</a></li>
         {{/if}}
       </ul>
-      <a data-activates="nav-mobile" class="button-collapse"><i class="material-icons">play</i></a>
+      <a data-activates="nav-mobile" class="button-collapse"><i class="material-icons">{{>logo}}</i></a>
     </div>
   </nav>
 </template>
