--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -47,20 +47,26 @@ $boardheight: $gridheight + $cellheight;
 .board {
   width: $boardwidth;
   height: $boardheight;
-  cursor: url('/black_stone.png') 42 42, auto;
+  // cursor: url('/black_stone.png') 42 42, auto;
 }
 
 .stone_pile {
-  width: 100px;
-  height: 100px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  position: relative;
 
   &__black {
+    top: ($boardheight / 2);
+    left: $boardwidth + 60 + 10;
+    position: absolute;
     background-color: black;
-    display: inline-block;
   }
 
   &__white {
+    top: ($boardheight / 2) + 40;
+    left: $boardwidth + 60 + 10;
+    position: absolute;
     background-color: white;
-    display: inline-block;
   }
 }
