--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -1,5 +1,9 @@
+@import 'dimensions';
+@import 'cell';
+@import 'board';
+
 body {
-  background-color: #997300;
+  background-color: $maskcolor;
 }
 .nav, .nav-wrapper, .yeah {
   background-color: #86592d;
@@ -19,35 +23,6 @@ body {
 .normalbold {
   font-family: "Avenir Next", "DemiBold";
   font-weight: normal;
-}
-
-$cellheight: (150px/4);
-$cellwidth: (150px/4);
-$gridwidth: $cellwidth * 9 + 2;
-$gridheight: $cellheight * 9 + 2;
-$boardwidth: $gridwidth + $cellwidth +1;
-$boardheight: $gridheight + $cellheight;
-
-.cell {
-  height: $cellheight;
-  width: $cellwidth;
-  background-color: #cc9900;
-  border: 1px solid black;
-  float: left;
-}
-
-.grid {
-  width: $gridwidth;
-  height: $gridheight;
-  border: 1px solid black;
-  margin: 0 auto; // center
-  vertical-align: middle;
-}
-
-.board {
-  width: $boardwidth;
-  height: $boardheight;
-  // cursor: url('/black_stone.png') 42 42, auto;
 }
 
 .stone_pile {
