--- a/client/views/components/cell.html
+++ b/client/views/components/cell.html
@@ -1,4 +1,7 @@
 <template name="cell">
   <div class="cell">
+    <div class="cell cell-ich"></div>
+    <div class="cell cell-ni"></div>
+     <div class="cell cell-san"></div>
   </div>
 </template>
