--- a/client/views/pages/kaya.html
+++ b/client/views/pages/kaya.html
@@ -1,4 +1,5 @@
 <template name="kaya">
+  {{>verticalSpace}}
   {{>board}}
   {{>stones}}
 </template>
@@ -13,4 +14,10 @@
 <template name="stone">
 <div class="stone_pile stone_pile__{{color}}">
   </div>
+</template>
+
+<template name="verticalSpace">
+  <br>
+  <br>
+  <br>
 </template>
