--- a/client/css/_dimensions.scss
+++ b/client/css/_dimensions.scss
@@ -1,9 +1,13 @@
-$cellheight: (150px/4);
-$cellwidth: (150px/4);
-$gridwidth: $cellwidth * 9 + 2;
-$gridheight: $cellheight * 9 + 2;
-$boardwidth: $gridwidth + $cellwidth +1;
+$cellsize:    200px;
+$cellheight:  ($cellsize /4);
+$cellwidth:   ($cellsize /4);
+$gridwidth:   $cellwidth * 9 + 2;
+$gridheight:  $cellheight * 9 + 2;
+$boardwidth:  $gridwidth + $cellwidth +1;
 $boardheight: $gridheight + $cellheight;
 
 $maskcolor: #997300;
+$randommargin: 60px;
+
+$stonepilespacing: $cellheight;
 
