--- a/client/views/components/cell.html
+++ b/client/views/components/cell.html
@@ -2,6 +2,9 @@
   <div class="cell">
     <div class="cell cell-ich"></div>
     <div class="cell cell-ni"></div>
-     <div class="cell cell-san"></div>
+    <div class="cell cell-san" id="{{cell}}" >
+      <div class="{{state}}">
+      </div>
+    </div>
   </div>
 </template>
