add reset button

--- a/client/views/pages/kaya.html
+++ b/client/views/pages/kaya.html
@@ -2,9 +2,7 @@
   {{>verticalSpace}}
   {{>board}}
   {{>stones}}
-  {{#each moves}}
-    <p>{{someMove}}</p>
-  {{/each}}
+  {{>reset}}
 </template>
 
 <template name="stones">
