the box-sizing precaution, too big for iphone

--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -3,6 +3,10 @@
 @import 'board';
 @import 'stone_pile';
 
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 html, body {
   overflow-x: hidden;
 }
