--- a/client/views/pages/kaya.html
+++ b/client/views/pages/kaya.html
@@ -2,9 +2,9 @@
   {{>verticalSpace n=[,,]}}
   {{>board}}
   {{>stones}}
-  {{>verticalSpace n=[,,,,]}}
+  {{>verticalSpace n=[,,,]}}
     <p>drag and drop</p>
-  {{>verticalSpace n=[,,,,,,]}}
+  {{>verticalSpace n=[,,,,,]}}
   {{>reset}}
 </template>
 
